# atlatix-agent-framework

./: README.md  cli.py  pyproject.toml
.github/workflows/: ci.yaml
core/: llm.py  memory.py  planner.py  tools.py
examples/: codingagent.py
tests/: test_agent.py
