[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "agentforge"
version = "0.1.0"
description = "Open source agent framework"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Rustam Shiriyev" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dependencies = [
    "tenacity>=8.2.0",
    "openai>=0.27.0", 
    "tiktoken>=0.4.0",
    "httpx>=0.24.0",
    "requests>=2.28.0", 
    "faiss-cpu>=0.1.0",
    "asyncio>=4.0.0",
    "numpy>=1.20.0",
    "pickle>=1.5.0"
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.25.0"]
replicate = ["replicate>=0.20.0"]
ollama = ["ollama>=0.3.1"]

[tool.setuptools.packages.find]
where = ["agentforge"]

[project.scripts]
agentforge = "agentforge.cli:main"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = 3.12
strict = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

